Bug 1714543 - Handle possible DWrite failures better when enumerating available fonts. r=lsalzman, a=jcristau

I haven't been able to reproduce the issue here locally and test this directly, but according to
the reporter a build with this patch works for them.

My guess is that perhaps IDWriteLocalizedStrings::GetLocaleName has been returning a failure result,
causing us to drop the relevant font from the list altogether. We can handle that better by still
including the font, even if we're unsure which name matches the system locale.

This patch also adds a few gfxWarning() messages in places where we really don't expect things
to fail, but if they do, it might help us understand why fonts fail to appear.

Differential Revision: https://phabricator.services.mozilla.com/D117406